<resources>
    <string name="app_name">Easy Diary Journal With Lock</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="permissions">Permissions</string>
    <string name="we_need_your_permission">We need your permission to provide\nthe best experience.</string>
    <string name="done">Done</string>
    <string name="allow_camera_access">Allow Camera Access</string>
    <string name="allow_gallery_access">Allow Gallery Access</string>
    <string name="espa_ol">Español</string>
    <string name="deutsch">Deutsch</string>
    <string name="fran_ais">Français</string>
    <string name="portugu_s">Português (PT)</string>
    <string name="turkish">Turkish (TR)</string>
    <string name="english">English (US)</string>
    <string name="english_uk">English (UK)</string>
    <string name="spanish_es">Spanish (ES)</string>
    <string name="urdu_pk">Urdu (PK)</string>
    <string name="arabic_ae">Arabic (AE)</string>
    <string name="select_language">Select Language</string>
    <string name="choose_your_preferred_language_to">Choose your preferred language to\npersonalize your diary experience.</string>
    <string name="protect_your_thoughts_and_memories_with_a_nsecure_4_digit_pin_for_quick_and_easy_naccess">Protect your thoughts and memories with a\nsecure 4-digit PIN for quick and easy\naccess.</string>
    <string name="setup_pin">Setup PIN</string>
    <string name="access_your_diary">Access Your Diary</string>
    <string name="pins_do_not_match_try_again">PINs do not match, try again</string>
    <string name="enterName">Name Field Empty</string>
    <string name="start_writing">Start Your\nWriting Journey</string>
    <string name="enter_your_name">What should we call you?</string>
    <string name="name">Enter your name</string>
    <string name="welcome_back_satti">Welcome Back, Satti</string>
    <string name="continueLabel">Continue</string>
    <string name="cherish_every_memory_with_new_ndigital_diary">Cherish every memory with new\ndigital diary</string>
    <string name="choose_a_theme_that_reflects_your_personality_nand_enhances_your_diary_experience">Choose a theme that reflects your personality and enhances your diary experience.</string>
    <string name="choose_your_theme">Choose Your Theme</string>
    <string name="later">Later</string>
    <string name="select">Select</string>
    <string name="library">Library</string>
    <string name="calender">Calender</string>
    <string name="_9_sep_2025">9 Sep,2025</string>
    <string name="cherish_the_moments_of_life_and_start_nwriting_your_diary">Cherish the moments of life and start\nwriting your diary</string>
    <string name="start_writing_diary">Start Writing Diary</string>
    <string name="notes">Notes</string>
    <string name="create_note">Create Note</string>
    <string name="add_note">Add Note</string>
    <string name="save">Save</string>
    <string name="header">Header</string>
    <string name="title">Title</string>
    <string name="write_your_thoughts_here">Write your thoughts here…</string>
    <string name="hash_tag">Hash Tag</string>
    <string name="media">Media</string>
    <string name="text">Text</string>
    <string name="background">Background</string>
    <string name="reminder">Reminder</string>
    <string name="how_you_feeling_today">How You Feeling Today?</string>
    <string name="personal"># Personal</string>
    <string name="personal1">Type a tag (e.g. #Work, #Personal)</string>
    <string name="no_data_in_library">No data found in library</string>
    <string name="tags">Tags</string>
    <string name="no_notes_for_current_day">No notes for selected day</string>
    <string name="change_background">Change Background</string>
    <string name="h1">H1</string>
    <string name="h2">H2</string>
    <string name="h3">H3</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="satti">Satti</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="edit_tags2">Manage Tags</string>
    <string name="color_theme">Color Theme</string>
    <string name="remainders">Reminders</string>
    <string name="dairy_lock">Dairy Lock</string>
    <string name="langauge">Language</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="dreame488_yahoo_com">dreame488@yahoo.com</string>
    <string name="enter_old_passkey">Enter Old Passkey</string>
    <string name="enter_new_passkey">Enter New Passkey</string>
    <string name="confirm_new_passkey">Confirm New Passkey</string>
    <string name="change_passkey">Change Passkey</string>
    <string name="love_easy_diary">Love Easy Diary?</string>
    <string name="your_feedback_helps_us">Your feedback helps us grow and keeps our diary experience amazing. If you’re enjoying the app, take a moment to rate us!</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_all_4_digits_in_each_field">Please enter all 4 digits in each field</string>
    <string name="old_pin_is_incorrect">Old PIN is incorrect</string>
    <string name="new_pins_do_not_match">New PINs do not match</string>
    <string name="pin_changed_successfully">PIN changed successfully</string>
    <string name="confirm">Confirm</string>
    <string name="colorpicker">ColorPicker</string>
    <string name="mycolorpickerdialog">MyColorPickerDialog</string>
    <string name="enter_pin_to_access_your_diary">Enter Pin To Access Your Diary</string>
    <string name="login">Login</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="you_should_enable_the_app_notifications">You should enable the app notifications!</string>
    <string name="add_new">Add New</string>
    <string name="reminder_text">Reminder Text</string>
    <string name="auto">Auto</string>
    <string name="reminders">Reminders</string>
    <string name="reminder_intervals">Reminder Intervals</string>
    <string name="search_tags">Search tags</string>
    <string name="edit">Edit</string>
    <string name="please_enter_valid_text">Please enter valid text</string>
    <string name="note_preview">Note Preview</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="upload_from_gallery">Upload From Gallery</string>
    <string name="reminder_set_for">Reminder set for %1$s</string>
    <string name="other_reminder">Daily Reminders</string>
    <string name="note_reminders">Note Reminders</string>
    <string name="no_daily_reminder">No daily reminder</string>
    <string name="no_note_reminder">No note reminder</string>
    <string name="reminder_set_for_future_date">Reminder set for future date</string>
    <string name="its_time_to_log_your_day_diary">It’s time to log your \uD83D\uDCD4 diary</string>
    <string name="reminder_set_for_time">Reminder set for %1$s</string>
    <string name="required_title">Note title is required</string>
    <string name="don_t_forget_your_note">🔔 Don’t forget your note — “%1$s”.</string>
    <string name="you_must_allow_schedule_alarm_permission">You must allow Schedule Alarm permission</string>
    <string name="you_must_allow_notification_permission">You must allow Notification  permission</string>
    <string name="note_reminder">Note Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="welcome_back">Welcome Back,%1$s</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="privacy_policy_link">https://sites.google.com/view/easy-diary-journal-with-lock/home</string>
    <string name="terms_link">https://payments.google.com/payments/apis-secure/u/0/get_legal_document?ldl=en_GB&amp;ldo=0&amp;ldt=buyertos</string>
    <string name="entrance_screen">Entrance Screen</string>
    <string name="language_screen">Language Screen</string>
    <string name="on_boarding_screen">OnBoarding Screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="feature_screen">Feature Screen</string>
    <string name="settings_screen">Settings Screen</string>
    <string name="premium_screen">Premium Screen</string>
    <string name="fetching_remote_config">Fetching Remote Config</string>
    <string name="loading_native">Loading Native…</string>
    <string name="loading_app_open">Loading App Open…</string>
    <string name="native_response">Native Responded</string>
    <string name="app_open_response">App Open Responded</string>
    <string name="_continue">Continue</string>
    <string name="navigate">Navigate</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="success">success</string>
    <string name="error">"Please enter same pin "</string>
    <string name="onboard_desc_1"> Log <b>your thoughts</b>, track habits, and <b>plan your goals</b> effortlessly in one beautiful space.</string>
    <string name="onboard_desc_2"> <b>Save moments</b>, attach photos, organize entries with tags, and <b>relive your favorite memories</b> anytime.</string>
    <string name="onboard_desc_3">Keep your <b>personal diary notes safe</b> with secure lock protection and <b>complete privacy control</b>.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="subscription_disclaimer">Subscriptions are managed via your Google Play Billing and will renew automatically unless cancelled at least 24 hours before the current period ends. After purchase, you can manage your subscriptions in your Account Settings.</string>
    <string name="today_get_full_access">Today: Get Full Access</string>
    <string name="get_full_access_to_all_premium_features">Get full access to all premium features</string>
    <string name="day_2_trial_reminder">Day 2: Trial Reminder</string>
    <string name="get_a_reminder_before_your_free_trial_ends">Get a reminder before your free trial ends</string>
    <string name="day_3_trial_ends">Day 3: Trial Ends</string>
    <string name="your_subscription_will_start_on_jun_21_cancel_anytime">Your subscription will start on Jun 21. Cancel anytime.</string>
    <string name="install_the_app">Install the App</string>
    <string name="you_successfully_installed_app">You successfully installed app</string>
    <string name="start_free_trial">
    <font color="#323C4B">Start </font>
    <font color="#42ABD0">Free Trial</font>

    </string>
    <string name="how_does_your_free_trial_work">How does your free trial work?</string>
    <string name="_7_days_free_then_139_99_per_year">7 days free, then $ 139.99 per year</string>
    <string name="advanced_lock_protection">Advanced Lock Protection</string>
    <string name="pin_amp_biometric_security"><![CDATA[PIN & biometric security]]></string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="sync_save_your_entries"><![CDATA[Sync & save your entries]]></string>
    <string name="smart_reminders">Smart Reminders</string>
    <string name="stay_on_track_daily">Stay on track daily</string>
    <string name="ad_free_experience">Ad-Free Experience</string>
    <string name="enjoy_without_ads">Enjoy without ads</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="add_tag">Add tag</string>
    <string name="share">Share</string>
</resources>