<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.easydiarysatti.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_createNote"
            app:destination="@id/navigation_createNote" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.easydiarysatti.ui.dashboard.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.easydiarysatti.ui.notifications.CalenderFragment"
        android:label="@string/calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/navigation_createNote"
        android:name="com.example.easydiarysatti.ui.createnote.CreateNotesFragment"
        android:label="@string/create_note"
        tools:layout="@layout/fragment_create_notes" />
</navigation>