<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_clear_search" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/start_free_trial"
            android:textColor="#2D3E50"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/outfit_light"
            android:text="@string/how_does_your_free_trial_work"
            android:textColor="#2D3E50"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_step1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_check_circle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@id/img_step1"
                android:fontFamily="@font/outfit_semibold"
                android:gravity="center_vertical"
                android:text="@string/install_the_app"
                android:textColor="#2D3E50"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/img_step1"

                android:fontFamily="@font/outfit_light"
                android:text="@string/you_successfully_installed_app"
                android:textColor="#8A94A6"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="30dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/gradiant_view_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_step2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_lock_circle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@id/img_step2"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/today_get_full_access"
                android:textColor="#2D3E50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/img_step2"
                android:fontFamily="@font/outfit_light"
                android:text="@string/get_full_access_to_all_premium_features"
                android:textColor="#8A94A6" />
        </RelativeLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="30dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/gradiant_view_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_step3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_bell_circle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@id/img_step3"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/day_2_trial_reminder"
                android:textColor="#2D3E50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/img_step3"
                android:fontFamily="@font/outfit_light"
                android:text="@string/get_a_reminder_before_your_free_trial_ends"
                android:textColor="#8A94A6" />
        </RelativeLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="30dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/gradiant_view_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_step4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_star_circle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@id/img_step4"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/day_3_trial_ends"
                android:textColor="#2D3E50"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSubscriptionStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/img_step4"
                android:fontFamily="@font/outfit_light"
                android:text="@string/your_subscription_will_start_on_jun_21_cancel_anytime"
                android:textColor="#8A94A6" />
        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/outfit_bold"
        android:gravity="center"
        android:text="@string/_7_days_free_then_139_99_per_year"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvPerMonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvPerMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="($ 11.66 / month)"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerMonth">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/gradient_button_pink_purple"
                android:text="Start your 3-Days Free Trial"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="12dp"
                    android:layout_margin="8dp"
                    android:background="#CCC" />

                <TextView
                    android:id="@+id/tvTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="12dp"
                    android:layout_margin="8dp"
                    android:background="#CCC" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_anytime"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/subscription_disclaimer"
                android:textColor="#666"
                android:textSize="11sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>